--- a/college/templates/selectupload.html
+++ b/college/templates/selectupload.html
@@ -5,12 +5,42 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+<style>
+ div {
+	width: 350px;
+	padding-right: 10px;
+	border: 2px dotted gray;
+	margin: 2px;
+	height:100%;
+}
+body {
+	font-family: georgia,garamond,serif;
+	font-size-adjust: 0.61;
+	background: aliceblue;
+}
+button {
+	color: #052e42;
+	border: 2px solid #2774b7;
+	height: 120px;
+	width: 100%;
+	font-size: 20px;
+}
+button:active{
+    color:white;
+    background:black;
+}
+
+
+</style>
 <body>
-<form action="usingupload/">
+<div>
+    <form action="usingupload/">
     <button type="submit">Using Upload</button>
 </form>
 <form action="usinglink/">
     <button type="submit">Using link</button>
 </form>
+</div>
+
 </body>
 </html>
