--- a/college/templates/link.html
+++ b/college/templates/link.html
@@ -4,11 +4,39 @@
 <head>
     <style>
 div {
-  width: 320px;
-  padding: 10px;
-  border: 5px solid gray;
-  margin: 0;
+	width: 350px;
+	padding-right: 10px;
+	border: 2px solid black;
+	margin: 0;
 }
+body {
+	font-family: georgia,garamond,serif;
+	font-size-adjust: 0.61;
+	background: aliceblue;
+}
+button {
+	color: #052e42;
+	border: 2px solid #2774b7;
+	height: 30px;
+}
+
+button:active{
+    color:white;
+    background:black;
+}
+.upload {
+	color: #052e42;
+	border: 2px solid red;
+	height: 50px;
+}
+.select {
+	background: #8e94ec;
+	border: 1px azure;
+	align-content: center;
+	height: 30px;
+}
+
+
 </style>
 </head>
 <body>
@@ -23,7 +51,7 @@ Upload using links
         <br>
         <br>
         <label for= "cat">Select Category</label>
-        <select name = 'category' required id="cat" >
+        <select class="select" name = 'category' required id="cat" >
             <option disabled selected value="none"> select Category </option>
             {% if topics %}
                 {% for i in topics %}
@@ -36,7 +64,7 @@ Upload using links
         <label for= "lk">Link</label>
         <input id = 'lk' type="text" placeholder="Paste Link" name="linkimage" required>
         <br>
-        <button style ="width:30%;" type="submit">Submit</button>
+        <button  class="upload" style ="width:30%;" type="submit">Submit</button>
  </form>
     {% if message == 1 %}
         {% include 'success.html' %}
