--- a/college/templates/upload.html
+++ b/college/templates/upload.html
@@ -5,11 +5,37 @@
 <head>
 <style>
 div {
-  width: 320px;
-  padding: 10px;
-  border: 5px solid gray;
-  margin: 0;
+	width: 350px;
+	padding-right: 10px;
+	border: 2px solid black;
+	margin: 0;
 }
+body {
+	font-family: georgia,garamond,serif;
+	font-size-adjust: 0.61;
+	background: aliceblue;
+}
+button {
+	color: #052e42;
+	border: 2px solid #2774b7;
+	height: 30px;
+}
+.upload {
+	color: #052e42;
+	border: 2px solid red;
+	height: 50px;
+}
+button:active{
+    color:white;
+    background:black;
+}
+.select {
+	background: #8e94ec;
+	border: 1px azure;
+	align-content: center;
+	height: 30px;
+}
+
 </style>
 </head>
 <body>
@@ -23,10 +49,9 @@ Upload the Images
  <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         <label for = "in">Enter Image Name</label>
-        <input id = "in" type="text" placeholder="Enter Image Name" name="filename" >
-        <br>
+        <input class="select" id = "in" type="text" placeholder="Enter Image Name" name="filename" >
         <label for= "cat">Select Category</label>
-        <select name = 'category' required id="cat" >
+        <select class="select" name = 'category' required id="cat" >
             <option disabled selected value="none"> select Category </option>
             {% if topics %}
                 {% for i in topics %}
@@ -37,7 +62,7 @@ Upload the Images
         </select>
         <input type = "file" name="document" required>
         <br>
-        <button style ="width:30%;" type="submit">Upload</button>
+        <button class="upload" style ="width:30%;" type="submit">Upload</button>
  </form>
  </div>
 <form action="/newcategory/">
