--- a/college/templates/Newtopic.html
+++ b/college/templates/Newtopic.html
@@ -17,20 +17,11 @@ body {
 	font-size-adjust: 0.61;
 	background: aliceblue;
 }
-button {
-	color: #052e42;
-	border: 2px solid #2774b7;
-	height: 30px;
-}
 
-button:active{
-    color:white;
-    background:black;
-}
 .upload {
 	color: #052e42;
 	border: 2px solid red;
-	height: 50px;
+	height: 30px;
 }
 .select {
 	background: #8e94ec;
@@ -45,8 +36,8 @@ button:active{
     <form action="" method="POST" >
         {% csrf_token %}
         <label for="ct">Enter category</label>
-        <input type="text" name="category" placeholder="Enter Category" required id="ct">
-        <input  type="submit" value="SUBMIT">
+        <input autocomplete="off" type="text" name="category" placeholder="Enter Category" required id="ct">
+        <input class="upload" type="submit" value="SUBMIT">
     </form>
     {% if error == 1 %}
         {% include 'error.html' %}
