--- a/college/templates/homepage.html
+++ b/college/templates/homepage.html
@@ -25,8 +25,8 @@ button:active{
     background:black;
 }
 .select {
-	background: #8e94ec;
-	border: 1px azure;
+	background: white;
+	border: 1px solid #2774b7;
 	display: flex;
 	flex-wrap: wrap;
 	align-content: center;
