--- a/college/templates/homepage.html
+++ b/college/templates/homepage.html
@@ -4,38 +4,98 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.2">
 <head>
 <style>
-div {
-	width: 350px;
-	border: 2px dotted gray;
+topbar{
+    border:2px solid #444857;
+    background:#444857;
+    width:320px;
+    height:20px;
+    position:absolute;
+    text-align:center;
+    font-size: 1rem;
+    font-family:Telefon Black;
+
+
 }
+.button {
+	font-size: 1rem;
+	text-shadow: black;
+	line-height: 1.2;
+	padding: 10px 16px;
+	margin: 10px 10px 10px 10px;
+	position: relative;
+	border-radius: 4px;
+	border: 3px solid transparent;
+	background: #2fb45a;
+	color: white;
+	cursor: pointer;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	text-align: center;
+}
+
+.button:active{
+    background: #107932;
+	color: white;
+}
+
+.delete {
+	font-size: 1rem;
+	text-shadow: black;
+	line-height: 1.2;
+	padding: 4px 16px;
+	margin: 10px 10px 10px 10px;
+	position: relative;
+	border-radius: 4px;
+	border: 3px solid transparent;
+	background: #d30505b0;
+	color: white;
+	cursor: pointer;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	text-align: center;
+	font-weight: bold;
+}
+.delete:active{
+    background: #550000b0;
+	color: white;
+}
+div {
+	width: 320px;
+	border: 2px dotted gray;
+	text-align:center;
+}
+
 body {
 	font-family: georgia,garamond,serif;
 	font-size-adjust: 0.61;
-	background: aliceblue;
+	background: #1e1f26;
+	color:white;
+	font-weight:700;
+	transition: .2s ease;
+	text-align: left;
 }
-button {
-	color: #052e42;
-	border: 2px solid #2774b7;
-	height: 30px;
-}
-button:active{
-    color:white;
-    background:black;
-}
+
 .select {
-	background: white;
-	border: 1px solid #2774b7;
-	display: flex;
-	flex-wrap: wrap;
-	align-content: center;
-	height: 30px;
+	font-size: 1rem;
+	text-shadow: black;
+	line-height: 1;
+	padding: 2px 2px;
+    margin-bottom:10px;
+	border-radius: 4px;
+	border: 3px solid transparent;
+	background: #444857;
+	color: white;
+	cursor: pointer;
+	text-align: center;
 }
 .picture {
 	color: #071d39;
 	border: 3px solid #040404;
 }
 .name {
-	color: blue;
+	color: white;
+	font-size:1em;
+	text-align:left;
 }
 .image{
     width:100%;
@@ -43,18 +103,20 @@ button:active{
 </style>
 </head>
 <body>
-<br>
+ <topbar>VECTORPHOTOS</topbar>
 <div>
+
     Upload new images
     {{ object.topic }}
     {{ object.image.url }}
     <form action="/upload/">
-        <button type="submit">Upload</button>
+        <button class="button " type="submit">Upload</button>
+    </form>
+    <form action="newcategory/">
+    <button class="button " type="submit">New Category</button>
     </form>
 </div>
-<form action="newcategory/">
-    <button type="submit">New Category</button>
-</form>
+
 <br>
 <br>
 <div>
@@ -74,7 +136,7 @@ button:active{
          <input id ="dl" type="radio" value = "delete" name = 'op'>
          <label for= "sr">Search</label>
          <input id ="sr" type="radio" value = "search" name = 'op' checked = "checked">
-        <button style ="width:30%;" type="submit">Go</button>
+        <button class="button" style ="width:30%;" type="submit">Go</button>
 
  </form>
 
@@ -95,12 +157,12 @@ button:active{
         {% endif %}
     <br>
     <div class="name">
-        Category = {{ i.topic }} || Filename = {{ i.name }}
+        Category = <span style="color:#2fb45a" >{{ i.topic }}</span> <br>Filename =<span style="color:#2fb45a" >{{ i.name }}</span>
     </div>
 
 
     <form action="upload/delete/{{ i.id }}">
-        <button type="submit">Delete</button>
+        <button class="delete" type="submit">Delete</button>
     </form>
     </div>
     <br>
