--- a/college/templates/selectupload.html
+++ b/college/templates/selectupload.html
@@ -6,28 +6,46 @@
     <title>Title</title>
 </head>
 <style>
+
  div {
 	width: 350px;
 	padding-right: 10px;
 	border: 2px dotted gray;
 	margin: 2px;
 	height:100%;
+	text-align: center;
 }
 body {
 	font-family: georgia,garamond,serif;
 	font-size-adjust: 0.61;
-	background: aliceblue;
+	background: #1e1f26;
+	color:white;
+	font-weight:700;
+	text-align:center;
+
 }
 button {
-	color: #052e42;
-	border: 2px solid #2774b7;
-	height: 120px;
-	width: 100%;
-	font-size: 20px;
+	font-size: 1rem;
+	font-weight:bold;
+	text-shadow: black;
+	line-height: 4;
+	padding: 10px 12px;
+	margin: 10px 8px 8px 10px;
+	position: relative;
+	border-radius: 4px;
+	border: 3px solid transparent;
+	background: #2fb45a;
+	color: white;
+	cursor: pointer;
+	white-space: nowrap;
+	text-align: center;
+	height:100%;
+	width:300px;
 }
+
 button:active{
-    color:white;
-    background:black;
+    background: #107932;
+	color: white;
 }
 
 
