--- a/college/templates/link.html
+++ b/college/templates/link.html
@@ -3,52 +3,104 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <head>
     <style>
-div {
-	width: 350px;
-	padding-right: 10px;
-	border: 2px solid black;
-	margin: 0;
+topbar{
+    border:2px solid #444857;
+    background:#444857;
+    width:320px;
+    height:20px;
+    position:absolute;
+    text-align:center;
+    font-size: 1rem;
+    font-family:Telefon Black;
 }
+.button {
+	font-size: 1rem;
+	text-shadow: black;
+	line-height: 1.2;
+	padding: 10px 16px;
+	margin: 10px 10px 10px 10px;
+	position: relative;
+	border-radius: 4px;
+	border: 3px solid transparent;
+	background: #2fb45a;
+	color: white;
+	cursor: pointer;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	text-align: center;
+}
+
+.button:active{
+    background: #107932;
+	color: white;
+}
+
+.upload {
+	font-size: 1rem;
+	text-shadow: black;
+	line-height: 1.2;
+	padding: 4px 16px;
+	margin: 10px 10px 10px 10px;
+	position: relative;
+	border-radius: 4px;
+	border: 3px solid transparent;
+	background: #23a818;
+	color: white;
+	cursor: pointer;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	text-align: center;
+	font-weight: bold;
+}
+.upload:active{
+    background: #550000b0;
+	color: white;
+}
+div {
+	width: 320px;
+	border: 2px dotted gray;
+	text-align:left;
+	margin-top:10px;
+	margin-bottom:10px;
+}
+
 body {
 	font-family: georgia,garamond,serif;
 	font-size-adjust: 0.61;
-	background: aliceblue;
-}
-button {
-	color: #052e42;
-	border: 2px solid #2774b7;
-	height: 30px;
+	background: #1e1f26;
+	color:white;
+	font-weight:700;
+	transition: .2s ease;
+	text-align: right;
 }
 
-button:active{
-    color:white;
-    background:black;
-}
-.upload {
-	color: #052e42;
-	border: 2px solid red;
-	height: 50px;
-}
 .select {
-	background: #8e94ec;
-	border: 1px azure;
-	align-content: center;
-	height: 30px;
+	font-size: 1rem;
+	text-shadow: black;
+	line-height: 1;
+	padding: 5px 5px;
+    margin-bottom:10px;
+	border-radius: 4px;
+	border: 3px solid transparent;
+	background: #444857;
+	color: white;
+	cursor: pointer;
+	text-align: center;
+	text-transform:capitalize;
 }
-
 
 </style>
 </head>
 <body>
 <form action="/">
-    <button type="submit">Go Back</button>
+    <button class="button" type="submit">Go Back</button>
 </form>
 Upload using links
 <div>
        <form method="post" >
         {% csrf_token %}
-        <input type="text" autocomplete="off" placeholder="Enter Image Name" name="filename" >
-        <br>
+           <label for= "cat">Enter Image Name</label>
+        <input class="select" type="text" autocomplete="off" placeholder="Enter Image Name" name="filename" >
         <br>
         <label for= "cat">Select Category</label>
         <select class="select" name = 'category' required id="cat" >
@@ -62,10 +114,14 @@ Upload using links
         </select>
         <br>
         <label for= "lk">Link</label>
-        <input id = 'lk' autocomplete="off" type="text" placeholder="Paste Link" name="linkimage" required>
+        <input id = 'lk' class="select" autocomplete="off" type="text" placeholder="Paste Link" name="linkimage" required>
         <br>
         <button  class="upload" style ="width:30%;" type="submit">Submit</button>
  </form>
+</div>
+  <form action="/newcategory/">
+    <button  class="button" type="submit">New Category</button>
+</form>
     {% if message == 1 %}
         {% include 'success.html' %}
             {% block contents %}
