--- a/college/templates/upload.html
+++ b/college/templates/upload.html
@@ -4,43 +4,98 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <head>
 <style>
-div {
-	width: 350px;
-	padding-right: 10px;
-	border: 2px solid black;
-	margin: 0;
+topbar{
+    border:2px solid #444857;
+    background:#444857;
+    width:320px;
+    height:20px;
+    position:absolute;
+    text-align:center;
+    font-size: 1rem;
+    font-family:Telefon Black;
 }
+.button {
+	font-size: 1rem;
+	text-shadow: black;
+	line-height: 1.2;
+	padding: 10px 16px;
+	margin: 10px 10px 10px 10px;
+	position: relative;
+	border-radius: 4px;
+	border: 3px solid transparent;
+	background: #2fb45a;
+	color: white;
+	cursor: pointer;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	text-align: center;
+}
+
+.button:active{
+    background: #107932;
+	color: white;
+}
+
+.upload {
+	font-size: 1rem;
+	text-shadow: black;
+	line-height: 1.2;
+	padding: 4px 16px;
+	margin: 10px 10px 10px 10px;
+	position: relative;
+	border-radius: 4px;
+	border: 3px solid transparent;
+	background: #23a818;
+	color: white;
+	cursor: pointer;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	text-align: center;
+	font-weight: bold;
+}
+.upload:active{
+    background: #550000b0;
+	color: white;
+}
+div {
+	width: 320px;
+	border: 2px dotted gray;
+	text-align:center;
+	margin-top:10px;
+	margin-bottom:10px;
+}
+
 body {
 	font-family: georgia,garamond,serif;
 	font-size-adjust: 0.61;
-	background: aliceblue;
+	background: #1e1f26;
+	color:white;
+	font-weight:700;
+	transition: .2s ease;
+	text-align: right;
 }
-button {
-	color: #052e42;
-	border: 2px solid #2774b7;
-	height: 30px;
-}
-.upload {
-	color: #052e42;
-	border: 2px solid red;
-	height: 50px;
-}
-button:active{
-    color:white;
-    background:black;
-}
+
 .select {
-	background: #8e94ec;
-	border: 1px azure;
-	align-content: center;
-	height: 30px;
+	font-size: 1rem;
+	text-shadow: black;
+	line-height: 1;
+	padding: 5px 5px;
+    margin-bottom:10px;
+	border-radius: 4px;
+	border: 3px solid transparent;
+	background: #444857;
+	color: white;
+	cursor: pointer;
+	text-align: center;
+	text-transform:capitalize;
 }
+
 
 </style>
 </head>
 <body>
 <form action="/">
-    <button type="submit">Go Back</button>
+    <button class="button" type="submit">Go Back</button>
 </form>
 Upload the Images
 <div>
@@ -49,8 +104,10 @@ Upload the Images
  <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         <label for = "in">Enter Image Name</label>
-        <input class="select" id = "in" type="text" autocomplete="" placeholder="Enter Image Name" name="filename" >
+        <input class="select" id = "in" type="text" autocomplete="off" placeholder="Enter Image Name" name="filename" >
+        <br>
         <label for= "cat">Select Category</label>
+        <br>
         <select class="select" name = 'category' required id="cat" >
             <option disabled selected value="none"> select Category </option>
             {% if topics %}
@@ -60,13 +117,14 @@ Upload the Images
                 {% endfor %}
             {% endif %}
         </select>
-        <input type = "file" name="document" required>
+        <input  type = "file" name="document" required>
         <br>
         <button class="upload" style ="width:30%;" type="submit">Upload</button>
  </form>
+
  </div>
-<form action="/newcategory/">
-    <button type="submit">New Category</button>
+  <form action="/newcategory/">
+    <button  class="button" type="submit">New Category</button>
 </form>
 </div>
     {% if message == 1 %}
