--- a/college/templates/selectupload.html
+++ b/college/templates/selectupload.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" 
+
+content="width=device-width, initial-
+
+scale=1">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -9,15 +13,13 @@
 
  div {
 	width: 350px;
-	padding-right: 10px;
 	border: 2px dotted gray;
-	margin: 2px;
-	height:100%;
 	text-align: center;
 }
 body {
-	font-family: georgia,garamond,serif;
-	font-size-adjust: 0.61;
+	font-family: 
+
+georgia,garamond,serif;
 	background: #1e1f26;
 	color:white;
 	font-weight:700;
@@ -37,7 +39,6 @@ button {
 	background: #2fb45a;
 	color: white;
 	cursor: pointer;
-	white-space: nowrap;
 	text-align: center;
 	height:100%;
 	width:300px;
@@ -53,10 +54,14 @@ button:active{
 <body>
 <div>
     <form action="usingupload/">
-    <button type="submit">Using Upload</button>
+    <button type="submit">Using 
+
+Upload</button>
 </form>
 <form action="usinglink/">
-    <button type="submit">Using link</button>
+    <button type="submit">Using 
+
+link</button>
 </form>
 </div>
 
