upload to add photos

--- a/college/templates/homepage.html
+++ b/college/templates/homepage.html
@@ -110,7 +110,7 @@ body {
     {{ object.topic }}
     {{ object.image.url }}
     <form action="/upload/">
-        <button class="button " type="submit">Upload</button>
+        <button class="button " type="submit">Add photos</button>
     </form>
     <form action="newcategory/">
     <button class="button " type="submit">New Category</button>
