--- a/college/templates/selectupload.html
+++ b/college/templates/selectupload.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<meta name="viewport" 
-
-content="width=device-width, initial-
-
-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -15,16 +11,15 @@ scale=1">
 	width: 350px;
 	border: 2px dotted gray;
 	text-align: center;
+	margin-left:auto;
+	margin-right:auto;
 }
 body {
-	font-family: 
-
-georgia,garamond,serif;
+	font-family: georgia,garamond,serif;
 	background: #1e1f26;
 	color:white;
 	font-weight:700;
 	text-align:center;
-
 }
 button {
 	font-size: 1rem;
@@ -41,7 +36,7 @@ button {
 	cursor: pointer;
 	text-align: center;
 	height:100%;
-	width:300px;
+	width:280px;
 }
 
 button:active{
