--- a/college/templates/link.html
+++ b/college/templates/link.html
@@ -62,6 +62,8 @@ div {
 	text-align:left;
 	margin-top:10px;
 	margin-bottom:10px;
+	margin-left:auto;
+	margin-right:auto;
 }
 
 body {
@@ -96,6 +98,32 @@ body {
     <button class="button" type="submit">Go Back</button>
 </form>
 Upload using links
+<div>
+       <form method="post" >
+        {% csrf_token %}
+           <label for= "cat">Enter Image Name</label>
+        <input class="select" type="text" autocomplete="off" placeholder="Enter Image Name" name="filename" >
+        <br>
+        <label for= "cat">Select Category</label>
+        <select class="select" name = 'category' required id="cat" >
+            <option disabled selected value="none"> select Category </option>
+            {% if topics %}
+                {% for i in topics %}
+                    {{ i.name }}
+                    <option value={{ i.name }}>{{ i.name }}</option>
+                {% endfor %}
+            {% endif %}
+        </select>
+        <br>
+        <label for= "lk">Link</label>
+        <input id = 'lk' class="select" autocomplete="off" type="text" placeholder="Paste Link" name="linkimage" required>
+        <br>
+        <button  class="upload" style ="width:30%;" type="submit">Submit</button>
+ </form>
+</div>
+<CENTER>OR</CENTER>
+<div style="background:#444857;border:2px solid #1a7725;"><topbar>Using Google Drive links</topbar></div><br>
+
 <div>
        <form method="post" >
         {% csrf_token %}
