--- a/college/templates/upload.html
+++ b/college/templates/upload.html
@@ -29,6 +29,7 @@ topbar{
 	white-space: nowrap;
 	text-overflow: ellipsis;
 	text-align: center;
+	margin-left:auto;
 }
 
 .button:active{
@@ -63,6 +64,8 @@ div {
 	text-align:center;
 	margin-top:10px;
 	margin-bottom:10px;
+	margin-left:auto;
+	margin-right:auto;
 }
 
 body {
@@ -73,6 +76,8 @@ body {
 	font-weight:700;
 	transition: .2s ease;
 	text-align: right;
+	margin-left:auto;
+	margin-right:auto;
 }
 
 .select {
