ADDED GOOGLE DRIVE functionality

--- a/college/templates/homepage.html
+++ b/college/templates/homepage.html
@@ -87,9 +87,8 @@ body {
 .select {
 	font-size: 1rem;
 	text-shadow: black;
-	line-height: 1;
-	padding: 2px 2px;
-    margin-bottom:10px;
+	padding: 1px 1px;
+    margin-bottom:1px;
 	border-radius: 4px;
 	border: 3px solid transparent;
 	background: #444857;
@@ -165,7 +164,7 @@ body {
         {% endif %}
     <br>
     <div class="name">
-        <center><span style="margin-left:auto;margin-right:auto;color:#2fb45a;">{{ i.name }}</span></center>->Category = <span style="color:#34c620" >{{ i.topic }}</span>
+        <center><span style="margin-left:auto;margin-right:auto;color:#e7ee0f;">{{ i.name }}</span></center>->Category = <span style="color:#34c620" >{{ i.topic }}</span>
     </div>
     <bdiv>
         <form action="upload/delete/{{ i.id }}">
