ADDED GOOGLE DRIVE functionality

--- a/college/templates/homepage.html
+++ b/college/templates/homepage.html
@@ -68,8 +68,7 @@ div {
 bdiv {
 	width: 320px;
 	text-align: left;
-    display: inline;
-    display: block ruby;
+    display:flex;
     padding-top:3px;
 }
 
