--- a/college/templates/homepage.html
+++ b/college/templates/homepage.html
@@ -187,6 +187,6 @@ body {
 <form action="/">
     <button class="button" style="margin-top:auto;margin-top:10px;" type="submit">Refresh</button>
 </form>
-
+<i style="font-size:15px;">Made by Rahul Kushwaha</i>
 </body>
 </html>
