--- a/college/templates/upload.html
+++ b/college/templates/upload.html
@@ -3,6 +3,7 @@
 <title>Kushwaha</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <head>
+<script async src="https://imgbb.com/upload.js"></script>
 <style>
 topbar{
     border:2px solid #444857;
@@ -99,6 +100,7 @@ body {
 </style>
 </head>
 <body>
+
 <form action="/">
     <button class="button" type="submit">Go Back</button>
 </form>
