--- a/college/templates/login.html
+++ b/college/templates/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Kushwaha</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <style>
@@ -93,7 +93,7 @@ body {
         <h4>Wrong Credentials</h4>
     {% endif %}
     </div>
-
+    <center><i style="font-size:15px;margin-top:100px;display:inherit;">Made by Rahul Kushwaha</i></center>
 </body>
 
 </html>
