--- a/college/templates/login.html
+++ b/college/templates/login.html
@@ -90,10 +90,10 @@ body {
         <h4>Enter Credentials</h4>
     {% endif %}
     {% if m == 1 %}
-        <h4>Wrong Credentials</h4>
+        <h4 style="color:#d71010;">Wrong Credentials</h4>
     {% endif %}
     </div>
-    <center><i style="font-size:15px;margin-top:100px;display:inherit;">Made by Rahul Kushwaha</i></center>
+    <center><i style="font-size:15px;margin-top:100px;display:inherit;">Made by <span style="color:yellow;">Rahul Kushwaha</span></i></center>
 </body>
 
 </html>
