--- a/college/templates/homepage.html
+++ b/college/templates/homepage.html
@@ -121,7 +121,7 @@ body {
     <form action="/upload/">
         <button class="button " type="submit">Add photos</button>
     </form>
-    <form action="newcategory/">
+    <form action="/newcategory/">
     <button class="button " type="submit">New Category</button>
     </form>
 </div>
@@ -188,6 +188,6 @@ body {
 <form action="/">
     <button class="button" style="margin-top:auto;margin-top:10px;" type="submit">Refresh</button>
 </form>
-<i style="font-size:15px;">Made by Rahul Kushwaha</i>
+<center><i style="font-size:15px;display:inherit;">Made by <span style="color:yellow;">Rahul Kushwaha</span></i></center>
 </body>
 </html>
