--- a/college/templates/homepage.html
+++ b/college/templates/homepage.html
@@ -185,7 +185,7 @@ body {
     <br>
     {% endif %}
 {% endfor %}
-<form action="/">
+<form action="/index">
     <button class="button" style="margin-top:auto;margin-top:10px;" type="submit">Refresh</button>
 </form>
 <center><i style="font-size:15px;display:inherit;">Made by <span style="color:yellow;">Rahul Kushwaha</span></i></center>
