--- a/college/templates/link.html
+++ b/college/templates/link.html
@@ -94,7 +94,7 @@ body {
 </style>
 </head>
 <body>
-<form action="/">
+<form action="/index">
     <button class="button" type="submit">Go Back</button>
 </form>
 Upload using links
