--- a/college/templates/upload.html
+++ b/college/templates/upload.html
@@ -101,7 +101,7 @@ body {
 </head>
 <body>
 
-<form action="/">
+<form action="/index">
     <button class="button" type="submit">Go Back</button>
 </form>
 Upload the Images
