--- a/college/templates/cards.html
+++ b/college/templates/cards.html
@@ -19,8 +19,8 @@ h1{
      color: #4181ee;
 }
  .card{
-    max-width: 300px;
-     min-height: 250px;
+     max-width: 200px;
+     min-height: 100px;
      background: #02b875;
      padding: 30px;
      box-sizing: border-box;
@@ -36,14 +36,9 @@ h1{
 }
  .card-title{
      margin-top: 0;
-     font-size: 16px;
+     font-size: 2em;
      font-weight: 600;
      letter-spacing: 1.2px;
-}
- .card-content{
-     font-size: 14px;
-     letter-spacing: 0.5px;
-     line-height: 1.5;
 }
 .card-btn{
      all: unset;
@@ -61,16 +56,15 @@ h1{
 </style>
 </head>
 <body>
-
 <div class="wrapper">
+    {% for i in alltopics %}
 <div class="card">
-	<h3 class="card-title">CARD TITLE</h3>
-		<p class="card-content">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+	<h3 class="card-title">{{ i.name }}</h3>
         <form action="\">
             <button class="card-btn">READ MORE</button>
         </form>
-
 	</div>
+    {% endfor %}
 </div>
 
 </body>
