--- a/college/templates/cards.html
+++ b/college/templates/cards.html
@@ -19,7 +19,7 @@ h1{
      color: #4181ee;
 }
  .card{
-     max-width: 200px;
+     width: 200px;
      min-height: 100px;
      background: #02b875;
      padding: 30px;
@@ -39,6 +39,7 @@ h1{
      font-size: 2em;
      font-weight: 600;
      letter-spacing: 1.2px;
+     word-wrap: break-word;
 }
 .card-btn{
      all: unset;
