--- a/college/templates/homepage.html
+++ b/college/templates/homepage.html
@@ -129,7 +129,7 @@ body {
     <button class="button " type="submit">New Category</button>
     </form>
     <form action="/selectcard/">
-        <button class="button " type="submit">Select Cards</button>
+        <button class="button " style="background:#2f76b4;" type="submit">Select Cards</button>
     </form>
 </div>
 
