--- a/college/templates/cards.html
+++ b/college/templates/cards.html
@@ -27,12 +27,16 @@ h1{
      color: #FFF;
      margin:20px;
      box-shadow: 0px 2px 18px -4px rgba(0,0,0,0.75);
+     border-radius: 4%;
 }
- .card:nth-child(2){
+ .card:nth-child(3n+0){
     background: #4181ee;
-}s
- .card:last-child{
+}
+ .card:nth-child(2n+0){
     background: #673ab7;
+}
+ .card:nth-child(4n+0){
+    background: #eb5834;
 }
  .card-title{
      margin-top: 0;
