--- a/college/templates/selectupload.html
+++ b/college/templates/selectupload.html
@@ -58,6 +58,11 @@ Upload</button>
 
 link</button>
 </form>
+    <form action="usinglinkpdf/">
+    <button type="submit">Using
+link(PDF)</button>
+</form>
+
 </div>
 
 </body>
