--- a/college/templates/allimages.html
+++ b/college/templates/allimages.html
@@ -143,7 +143,7 @@ body {
         <a href="{{ i.link }}" ><img class="image" src = {{ i.link }} width="50%" alt="No image found"></a>
         {% endif %}
         {% if i.pdflink %}
-        <form action="{{ i.link }}" >
+        <form action="{{ i.pdflink }}" >
         <input class="select" style="margin-left:10px;" value="{{ i.pdflink }}"  type="text"></input>
         </form>
     {% endif %}
