--- a/college/templates/homepage.html
+++ b/college/templates/homepage.html
@@ -123,7 +123,7 @@ body {
     {{ object.topic }}
     {{ object.image.url }}
     <form action="/upload/">
-        <button class="button " type="submit">Add photos</button>
+        <button class="button " type="submit">Add</button>
     </form>
     <form action="/newcategory/">
     <button class="button " type="submit">New Category</button>
