--- a/college/templates/allimages.html
+++ b/college/templates/allimages.html
@@ -98,7 +98,7 @@ body {
 .select {
 	font-size: 1rem;
 	text-shadow: black;
-	padding: 1px 1px;
+	padding: 1px 1px 1px 1px;
     margin-bottom:1px;
 	border-radius: 4px;
 	border: 3px solid transparent;
